--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -1,14 +1,14 @@
 ﻿l_english:
  STATE_1:1 "Land"
- STATE_2:0 "Latium"
- STATE_3:0 "Switzerland"
- STATE_4:0 "Lower Austria"
- STATE_5:1 "Ermland-Masuren"
- STATE_6:0 "Vlaanderen"
- STATE_7:0 "Holland"
- STATE_8:0 "Luxemburg"
- STATE_9:0 "Bohemia"
- STATE_10:0 "Warszawa"
+ STATE_2:0 "Portugal"
+ STATE_3:0 "France"
+ STATE_4:0 "Spain"
+ STATE_5:0 "Corsica"
+ STATE_6:0 "Baleares"
+ STATE_7:0 "Sardinia"
+ STATE_8:0 "North Italy"
+ STATE_9:0 "South Italy"
+ STATE_10:0 "Sicily"
  STATE_11:0 "Kaunas"
  STATE_12:0 "Vidzeme"
  STATE_13:0 "Harju"
