Middle East States & Ottomans

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -14,3 +14,35 @@
  TES:0 "Microwave Cooking for One"
  TES_DEF:0 "Microwave Cooking for One"
  TES_ADJ:0 "Microwave Cooking for One"
+
+ EUR_fascism:0 "Europe"
+ EUR_fascism_DEF:0 "Europe"
+ EUR_democratic:0 "Europe"
+ EUR_democratic_DEF:0 "Europe"
+ EUR_neutrality:1 "Europe"
+ EUR_neutrality_DEF:1 "Europe"
+ EUR_communism:0 "Europe"
+ EUR_communism_DEF:0 "Europe"
+ EUR_fascism_ADJ:0 "Europe"
+ EUR_democratic_ADJ:0 "Europe"
+ EUR_neutrality_ADJ:0 "Europe"
+ EUR_communism_ADJ:0 "Europe"
+ EUR:0 "Europe"
+ EUR_DEF:0 "Europe"
+ EUR_ADJ:0 "Europe"
+
+ OTO_fascism:0 "Ottomans"
+ OTO_fascism_DEF:0 "Ottomans"
+ OTO_democratic:0 "Ottomans"
+ OTO_democratic_DEF:0 "Ottomans"
+ OTO_neutrality:1 "Ottomans"
+ OTO_neutrality_DEF:1 "Ottomans"
+ OTO_communism:0 "Ottomans"
+ OTO_communism_DEF:0 "Ottomans"
+ OTO_fascism_ADJ:0 "Ottomans"
+ OTO_democratic_ADJ:0 "Ottomans"
+ OTO_neutrality_ADJ:0 "Ottomans"
+ OTO_communism_ADJ:0 "Ottomans"
+ OTO:0 "Ottomans"
+ OTO_DEF:0 "Ottomans"
+ OTO_ADJ:0 "Ottomans"
