--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- STATE_1:1 "Land"
+ STATE_1:3 "Land"
  STATE_2:0 "Portugal"
  STATE_3:0 "France"
  STATE_4:0 "Spain"
@@ -9,30 +9,30 @@
  STATE_8:0 "North Italy"
  STATE_9:0 "South Italy"
  STATE_10:0 "Sicily"
- STATE_11:0 "Kaunas"
- STATE_12:0 "Vidzeme"
- STATE_13:0 "Harju"
- STATE_14:0 "Brittany"
- STATE_15:0 "Normandy"
- STATE_16:0 "Ile de France"
- STATE_17:1 "Franche-Comte"
- STATE_18:0 "Champagne"
- STATE_19:0 "Aquitaine"
- STATE_20:0 "Rhone"
- STATE_21:0 "Provence"
- STATE_22:0 "Languedoc"
- STATE_23:0 "Poitou"
- STATE_24:0 "Centre"
- STATE_25:0 "Limousin"
- STATE_26:0 "Auvergne"
- STATE_27:0 "Bourgogne"
- STATE_28:1 "Alsace-Lorraine"
- STATE_29:1 "Nord-Pas-de-Calais"
- STATE_30:0 "Loire"
- STATE_31:0 "Midi Pyrenees"
- STATE_32:0 "Alpes"
- STATE_33:0 "Centre-Sud"
- STATE_34:0 "Wallonie"
+ STATE_11:1 "Greece"
+ STATE_12:1 "Balkans"
+ STATE_13:1 "Greek Aegean"
+ STATE_14:1 "West Anataolia"
+ STATE_15:1 "East Anataolia"
+ STATE_16:1 "Palestine"
+ STATE_17:2 "Lebanon"
+ STATE_18:1 "Syria"
+ STATE_19:1 "Transjordan"
+ STATE_20:1 "South Cyprus"
+ STATE_21:1 "North Cyprus"
+ STATE_22:1 "Mesopotamia"
+ STATE_23:1 "Persia"
+ STATE_24:1 "Kuwait"
+ STATE_25:1 "Al Hufuf"
+ STATE_26:1 "Qatar"
+ STATE_27:1 "Bahrain"
+ STATE_28:2 "Trucial Coast"
+ STATE_29:2 "Ash Sharqiyah"
+ STATE_30:1 "Muscat"
+ STATE_31:1 "Ibri"
+ STATE_32:3 "Nizwa"
+ STATE_33:1 "Sohar"
+ STATE_34:1 "Al Wusta"
  STATE_35:0 "Brabant"
  STATE_36:0 "Friesland"
  STATE_37:0 "Sjaelland"
