Map Cleanup and test countries

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -33,19 +33,19 @@
  STATE_32:3 "Nizwa"
  STATE_33:1 "Sohar"
  STATE_34:1 "Al Wusta"
- STATE_35:0 "Brabant"
- STATE_36:0 "Friesland"
- STATE_37:0 "Sjaelland"
- STATE_38:0 "Norrland"
- STATE_39:0 "South Tyrol"
- STATE_40:0 "Barnaul"
- STATE_41:0 "Madrid"
- STATE_42:0 "Moselland"
- STATE_43:0 "Northern Hungary"
- STATE_44:0 "Albania"
- STATE_45:0 "Vojvodina"
- STATE_46:0 "Muntenia"
- STATE_47:0 "Thessaly"
+ STATE_35:1 "Rub' al Khali"
+ STATE_36:1 "Dhofar"
+ STATE_37:1 "Fujairah"
+ STATE_38:1 "Ras al-Khaimah"
+ STATE_39:1 "Umm al-Qaiwain"
+ STATE_40:1 "Dubai"
+ STATE_41:1 "Sinai"
+ STATE_42:1 "Al Jawf"
+ STATE_43:1 "Tabuk"
+ STATE_44:1 "Ha'il"
+ STATE_45:1 "Mahra"
+ STATE_46:1 "Hadramut"
+ STATE_47:1 "Shabwa"
  STATE_48:0 "Sofia"
  STATE_49:0 "Ankara"
  STATE_50:0 "Württemberg"
