--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- STATE_1:3 "Land"
+ STATE_1:0 "Gilbraltor"
  STATE_2:0 "Portugal"
  STATE_3:0 "France"
  STATE_4:0 "Spain"
@@ -9,83 +9,83 @@
  STATE_8:0 "North Italy"
  STATE_9:0 "South Italy"
  STATE_10:0 "Sicily"
- STATE_11:1 "Greece"
- STATE_12:1 "Balkans"
- STATE_13:1 "Greek Aegean"
- STATE_14:1 "West Anataolia"
- STATE_15:1 "East Anataolia"
- STATE_16:1 "Palestine"
- STATE_17:2 "Lebanon"
- STATE_18:1 "Syria"
- STATE_19:1 "Transjordan"
- STATE_20:1 "South Cyprus"
- STATE_21:1 "North Cyprus"
- STATE_22:1 "Mesopotamia"
- STATE_23:1 "Persia"
- STATE_24:1 "Kuwait"
- STATE_25:1 "Al Hufuf"
- STATE_26:1 "Qatar"
- STATE_27:1 "Bahrain"
- STATE_28:2 "Trucial Coast"
- STATE_29:2 "Ash Sharqiyah"
- STATE_30:1 "Muscat"
- STATE_31:1 "Ibri"
+ STATE_11:0 "Greece"
+ STATE_12:0 "Balkans"
+ STATE_13:0 "West Aegean Islands"
+ STATE_14:0 "West Anatolia"
+ STATE_15:0 "East Anatolia"
+ STATE_16:0 "Palestine"
+ STATE_17:0 "Lebanon"
+ STATE_18:0 "Syria"
+ STATE_19:0 "Transjordan"
+ STATE_20:0 "South Cyprus"
+ STATE_21:0 "North Cyprus"
+ STATE_22:0 "Mesopotamia"
+ STATE_23:0 "Persia"
+ STATE_24:0 "Kuwait"
+ STATE_25:0 "Al Hufuf"
+ STATE_26:0 "Qatar"
+ STATE_27:0 "Bahrain"
+ STATE_28:0 "Abu Dhabi"
+ STATE_29:0 "Ash Sharqiyah"
+ STATE_30:0 "Muscat"
+ STATE_31:0 "Ibri"
  STATE_32:3 "Nizwa"
- STATE_33:1 "Sohar"
- STATE_34:1 "Al Wusta"
- STATE_35:1 "Rub' al Khali"
- STATE_36:1 "Dhofar"
- STATE_37:1 "Fujairah"
- STATE_38:1 "Ras al-Khaimah"
- STATE_39:1 "Umm al-Qaiwain"
- STATE_40:1 "Dubai"
- STATE_41:1 "Sinai"
- STATE_42:1 "Al Jawf"
- STATE_43:1 "Tabuk"
- STATE_44:1 "Ha'il"
- STATE_45:1 "Mahra"
- STATE_46:1 "Hadramut"
- STATE_47:1 "Shabwa"
- STATE_48:0 "Sofia"
- STATE_49:0 "Ankara"
- STATE_50:0 "Württemberg"
- STATE_51:0 "Rhineland"
- STATE_52:0 "Oberbayern"
- STATE_53:0 "Niederbayern"
- STATE_54:0 "Franken"
- STATE_55:0 "Hessen"
- STATE_56:0 "Weser-Ems"
- STATE_57:0 "Westfalen"
- STATE_58:0 "Schleswig-Holstein"
- STATE_59:0 "Hannover"
- STATE_60:0 "Thüringen"
- STATE_61:0 "Mecklenburg"
- STATE_62:1 "Vorpommern"
- STATE_63:0 "Hinterpommern"
- STATE_64:0 "Brandenburg"
- STATE_65:0 "Sachsen"
- STATE_66:0 "Niederschlesien"
- STATE_67:0 "Oberschlesien"
- STATE_68:0 "Ostmark"
- STATE_69:0 "Sudetenland"
- STATE_70:0 "Western Slovakia"
- STATE_71:0 "Eastern Slovakia"
- STATE_72:0 "Zaolzie"
- STATE_73:0 "Carpathian Ruthenia"
- STATE_74:0 "Eastern Sudetenland"
- STATE_75:0 "Moravia"
- STATE_76:0 "North Transylvania"
- STATE_77:0 "Dobrudja"
- STATE_78:0 "Bessarabia"
- STATE_79:0 "Moldova"
- STATE_80:0 "Bucovina"
+ STATE_33:0 "Sohar"
+ STATE_34:0 "Al Wusta"
+ STATE_35:0 "Rub' al Khali"
+ STATE_36:0 "Dhofar"
+ STATE_37:0 "Ras al'Khaimah"
+ STATE_38:0 "Ajman"
+ STATE_39:0 "Sharjah"
+ STATE_40:0 "Dubai"
+ STATE_41:0 "Sinai"
+ STATE_42:0 "Al Jawf"
+ STATE_43:0 "Tabuk"
+ STATE_44:0 "Ha'il"
+ STATE_45:0 "Mahra"
+ STATE_46:0 "Hadramut"
+ STATE_47:0 "Shabwa"
+ STATE_48:0 "Rumelia"
+ STATE_49:0 "Inner Macedonia"
+ STATE_50:0 "Thessaly"
+ STATE_51:0 "Samos"
+ STATE_52:0 "Fujairah"
+ STATE_53:0 "Musandam"
+ STATE_54:0 "Umm al-Qaiwain"
+ STATE_55:0 "Delta"
+ STATE_56:0 "Tripoli"
+ STATE_57:0 "Tunis"
+ STATE_58:0 "Malta"
+ STATE_59:0 "Tlemcen"
+ STATE_60:0 "Marrakech"
+ STATE_61:0 "Western Sahara"
+ STATE_62:0 "Mauritania"
+ STATE_63:0 "Aden"
+ STATE_64:0 "Sa'dah"
+ STATE_65:0 "Ta'izz"
+ STATE_66:0 "Sanaa"
+ STATE_67:0 "Riyadh"
+ STATE_68:0 "Najran"
+ STATE_69:0 "Hejaz"
+ STATE_70:0 "Dawasir"
+ STATE_71:0 "Hafar"
+ STATE_72:0 "Gambia"
+ STATE_73:0 "Senegal"
+ STATE_74:0 "Bissau"
+ STATE_75:0 "Kaabu"
+ STATE_76:0 "Khartoum"
+ STATE_77:0 "South Aegean Islands"
+ STATE_78:0 "East Aegean Islands"
+ STATE_79:0 "Libyan Desert"
+ STATE_80:0 "Sabha"
  STATE_81:0 "Oltenia"
  STATE_82:0 "Banat"
  STATE_83:0 "Crisana"
  STATE_84:0 "Transylvania"
  STATE_85:0 "Danzig"
  STATE_86:0 "Poznan"
- STATE_87:1 "Łódz"
+ STATE_87:0 "Łódz"
  STATE_88:0 "Krakow"
  STATE_89:0 "Stanisławów"
  STATE_90:0 "Kielce"
@@ -94,7 +94,7 @@
  STATE_93:0 "Wołyn"
  STATE_94:0 "Polesie"
  STATE_95:0 "Nowogródek"
- STATE_96:1 "Wilejka"
+ STATE_96:0 "Wilejka"
  STATE_97:0 "Białystok"
  STATE_98:0 "Płock"
  STATE_99:0 "Jutland"
@@ -108,7 +108,7 @@
  STATE_107:0 "Serbia"
  STATE_108:0 "Morava"
  STATE_109:0 "Croatia"
- STATE_110:1 "Østlandet"
+ STATE_110:0 "Østlandet"
  STATE_111:0 "Uusimaa"
  STATE_112:0 "Lisbon"
  STATE_113:0 "Leinster"
@@ -121,7 +121,7 @@
  STATE_120:0 "Scottish Highlands"
  STATE_121:0 "Lothian"
  STATE_122:0 "Wales"
- STATE_123:1 "South-West England"
+ STATE_123:0 "South-West England"
  STATE_124:0 "Gotland"
  STATE_125:0 "East Anglia"
  STATE_126:0 "Greater London Area"
@@ -141,7 +141,7 @@
  STATE_140:0 "Västergötland"
  STATE_141:0 "Svealand"
  STATE_142:0 "Vestlandet"
- STATE_143:1 "Trøndelag"
+ STATE_143:0 "Trøndelag"
  STATE_144:0 "Nord-Norge"
  STATE_145:0 "Åland"
  STATE_146:0 "Karjala"
@@ -163,20 +163,20 @@
  STATE_162:0 "Tuscany"
  STATE_163:0 "Zara"
  STATE_164:0 "Dodecanese"
- STATE_165:1 "Cataluña"
- STATE_166:1 "Western Aragón"
+ STATE_165:0 "Cataluña"
+ STATE_166:0 "Western Aragón"
  STATE_167:0 "Valencia"
  STATE_168:0 "Murcia"
- STATE_169:1 "Sevilla"
+ STATE_169:0 "Sevilla"
  STATE_170:0 "Extremadura"
  STATE_171:0 "Galicia"
- STATE_172:1 "Navarra"
+ STATE_172:0 "Navarra"
  STATE_173:0 "Granada"
- STATE_174:1 "León"
- STATE_175:1 "Ciudad Real"
- STATE_176:1 "Burgos"
- STATE_177:1 "Islas Baleares"
- STATE_178:1 "Islas Canarias"
+ STATE_174:0 "León"
+ STATE_175:0 "Ciudad Real"
+ STATE_176:0 "Burgos"
+ STATE_177:0 "Islas Baleares"
+ STATE_178:0 "Islas Canarias"
  STATE_179:0 "Beja"
  STATE_180:0 "Porto"
  STATE_181:0 "Guarda"
@@ -187,7 +187,7 @@
  STATE_186:0 "Peloponnese"
  STATE_187:0 "Aegean Islands"
  STATE_188:0 "Memel"
- STATE_189:1 "Siauliai"
+ STATE_189:0 "Siauliai"
  STATE_190:0 "Kurzeme"
  STATE_191:0 "Tartu"
  STATE_192:0 "Odessa"
@@ -227,7 +227,7 @@
  STATE_226:0 "Dnipropetrovsk"
  STATE_227:0 "Stalino"
  STATE_228:0 "Voroshilovgrad"
- STATE_229:1 "Azerbaijan"
+ STATE_229:0 "Azerbaijan"
  STATE_230:0 "Armenia"
  STATE_231:0 "Georgia"
  STATE_232:0 "Grozny"
@@ -284,7 +284,7 @@
  STATE_283:0 "Gansu"
  STATE_284:0 "North Island"
  STATE_285:0 "New South Wales"
- STATE_286:1 "Southern Indochina"
+ STATE_286:0 "Southern Indochina"
  STATE_287:0 "Taklamakan"
  STATE_288:0 "Burma"
  STATE_289:0 "Siam"
@@ -302,14 +302,14 @@
  STATE_301:0 "Paraguay"
  STATE_302:0 "La Paz"
  STATE_303:0 "Lima"
- STATE_304:1 "Panamá"
+ STATE_304:0 "Panamá"
  STATE_305:0 "Ecuador"
  STATE_306:0 "Cundinamarca"
  STATE_307:0 "Miranda"
  STATE_308:0 "Leeward Islands"
  STATE_309:0 "Suriname"
  STATE_310:0 "French Guiana"
- STATE_311:1 "British Honduras"
+ STATE_311:0 "British Honduras"
  STATE_312:0 "Honduras"
  STATE_313:0 "Guatemala"
  STATE_314:0 "El Salvador"
@@ -320,7 +320,7 @@
  STATE_319:0 "Dominican Republic"
  STATE_320:0 "French India"
  STATE_321:0 "Goa"
- STATE_322:1 "Nagqu"
+ STATE_322:0 "Nagqu"
  STATE_323:0 "Nepal"
  STATE_324:0 "Bhutan"
  STATE_325:0 "Yunnan"
@@ -331,8 +331,8 @@
  STATE_330:0 "Mongolia"
  STATE_331:0 "Newfoundland"
  STATE_332:0 "Labrador"
- STATE_333:1 "North Borneo"
- STATE_334:1 "Kalimantan"
+ STATE_333:0 "North Borneo"
+ STATE_334:0 "Kalimantan"
  STATE_335:0 "Java"
  STATE_336:0 "Singapore"
  STATE_337:0 "Faroe Islands"
@@ -404,8 +404,8 @@
  STATE_403:0 "Tyumen"
  STATE_404:0 "Kyzyl Orda"
  STATE_405:0 "Tashkent"
- STATE_406:1 "Guryev"
- STATE_407:1 "Ural'sk"
+ STATE_406:0 "Guryev"
+ STATE_407:0 "Ural'sk"
  STATE_408:0 "Vladivostok"
  STATE_409:0 "Khabarovsk"
  STATE_410:0 "Sistan"
@@ -417,7 +417,7 @@
  STATE_416:0 "Khorasan"
  STATE_417:0 "Hamadan"
  STATE_418:0 "Semnan"
- STATE_419:1 "Tibriz"
+ STATE_419:0 "Tibriz"
  STATE_420:0 "Gilan"
  STATE_421:0 "Kurdistan"
  STATE_422:0 "Ceylon"
@@ -455,7 +455,7 @@
  STATE_454:0 "Palestine"
  STATE_455:0 "Jordan"
  STATE_456:0 "Aswan"
- STATE_457:1 "Eastern Desert"
+ STATE_457:0 "Eastern Desert"
  STATE_458:0 "Tunisia"
  STATE_459:0 "Algiers"
  STATE_460:0 "Constantine"
@@ -494,7 +494,7 @@
  STATE_493:0 "La Libertad"
  STATE_494:0 "Ucayali"
  STATE_495:0 "Amazonas"
- STATE_496:1 "Minas Gerais"
+ STATE_496:0 "Minas Gerais"
  STATE_497:0 "Maranhao"
  STATE_498:0 "Rio Grande"
  STATE_499:0 "Bahia"
@@ -521,7 +521,7 @@
  STATE_520:0 "Northern Territory"
  STATE_521:0 "Queensland"
  STATE_522:0 "Western Australia"
- STATE_523:1 "Papua"
+ STATE_523:0 "Papua"
  STATE_524:0 "Taiwan"
  STATE_525:0 "South Korea"
  STATE_526:0 "Okinawa"
@@ -538,7 +538,7 @@
  STATE_537:0 "South Sakhalin"
  STATE_538:0 "Central Congo"
  STATE_539:0 "Gabon"
- STATE_540:1 "South Angola"
+ STATE_540:0 "South Angola"
  STATE_541:0 "South West Africa"
  STATE_542:0 "Bechuanaland"
  STATE_543:0 "Madagascar"
@@ -554,7 +554,7 @@
  STATE_553:0 "Lebanon"
  STATE_554:0 "Damascus"
  STATE_555:0 "Kuril Islands"
- STATE_556:1 "Mali"
+ STATE_556:0 "Mali"
  STATE_557:0 "Mauritania"
  STATE_558:0 "Nigeria"
  STATE_559:0 "Somaliland"
@@ -611,7 +611,7 @@
  STATE_610:0 "Jehol"
  STATE_611:0 "South Chahar"
  STATE_612:0 "Chahar"
- STATE_613:2 "Shanghai"
+ STATE_613:0 "Shanghai"
  STATE_614:0 "Hebei"
  STATE_615:0 "Shanxi"
  STATE_616:0 "Ningxia"
@@ -663,11 +663,11 @@
  STATE_662:0 "Sirte"
  STATE_663:0 "Cyrenaica"
  STATE_664:0 "Southern Slovakia"
- STATE_665:1 "Gabès"
+ STATE_665:0 "Gabès"
  STATE_666:0 "Lappland"
  STATE_667:0 "Lesser Sunda Islands"
  STATE_668:0 "The Moluccas"
- STATE_669:1 "West Papua"
+ STATE_669:0 "West Papua"
  STATE_670:0 "Laos"
  STATE_671:0 "Tonkin"
  STATE_672:0 "Sumatra"
@@ -683,7 +683,7 @@
  STATE_682:0 "Northern Ontario"
  STATE_683:0 "Northeastern Canada"
  STATE_684:0 "Caroline Islands"
- STATE_685:1 "Panamá Canal"
+ STATE_685:0 "Panamá Canal"
  STATE_686:0 "Puerto Rico"
  STATE_687:0 "British Guyana"
  STATE_688:0 "Chaco Boreal"
@@ -750,17 +750,17 @@
  STATE_749:0 "Huangshan"
  STATE_750:0 "Changde"
  STATE_751:0 "Liangshan"
- STATE_752:1 "Ganzi"
+ STATE_752:0 "Ganzi"
  STATE_753:0 "Gannan"
  STATE_754:0 "Golog"
  STATE_755:0 "Haixi"
  STATE_756:0 "Jiuquan"
  STATE_757:0 "Shigatse"
  STATE_758:0 "Ngari"
- STATE_759:1 "Kunlun Shan"
+ STATE_759:0 "Kunlun Shan"
  STATE_760:0 "Dabancheng"
  STATE_761:0 "Hulunbuir"
- STATE_762:1 "Katowice"
+ STATE_762:0 "Katowice"
  STATE_763:0 "Königsberg"
  STATE_764:0 "West Banat"
  STATE_765:0 "Qatar"
@@ -782,7 +782,7 @@
  STATE_781:0 "Niger"
  STATE_782:0 "Tombouctou"
  STATE_783:0 "Sidi Ifni"
- STATE_784:1 "Wilno"
+ STATE_784:0 "Wilno"
  STATE_785:0 "Picardy"
  STATE_786:0 "Mauritanian Desert"
  STATE_787:0 "Northern Kashmir"
