--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -66,29 +66,29 @@
  STATE_65:0 "Ta'izz"
  STATE_66:0 "Sanaa"
  STATE_67:0 "Riyadh"
- STATE_68:0 "Najran"
- STATE_69:0 "Hejaz"
+ STATE_68:0 "Jazan"
+ STATE_69:0 "Medinah"
  STATE_70:0 "Dawasir"
  STATE_71:0 "Hafar"
  STATE_72:0 "Gambia"
  STATE_73:0 "Senegal"
  STATE_74:0 "Bissau"
  STATE_75:0 "Kaabu"
- STATE_76:0 "Khartoum"
- STATE_77:0 "South Aegean Islands"
- STATE_78:0 "East Aegean Islands"
- STATE_79:0 "Libyan Desert"
- STATE_80:0 "Sabha"
- STATE_81:0 "Oltenia"
- STATE_82:0 "Banat"
- STATE_83:0 "Crisana"
- STATE_84:0 "Transylvania"
- STATE_85:0 "Danzig"
- STATE_86:0 "Poznan"
- STATE_87:0 "Łódz"
- STATE_88:0 "Krakow"
- STATE_89:0 "Stanisławów"
- STATE_90:0 "Kielce"
+ STATE_76:0 "Canary Islands"
+ STATE_77:0 "Khartoum"
+ STATE_78:0 "South Aegean Islands"
+ STATE_79:0 "East Aegean Islands"
+ STATE_80:0 "Libyan Desert"
+ STATE_81:0 "Sabha"
+ STATE_82:0 "Sharqiyah"
+ STATE_83:0 "Al Haasa"
+ STATE_84:0 "Sharqiyah"
+ STATE_85:0 "Najran"
+ STATE_86:0 "Al Mukalla"
+ STATE_87:0 "Qasim"
+ STATE_88:0 "Asir"
+ STATE_89:0 "Al Baha"
+ STATE_90:0 "Makkah"
  STATE_91:0 "Lwów"
  STATE_92:0 "Lublin"
  STATE_93:0 "Wołyn"
