--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -89,23 +89,23 @@
  STATE_88:0 "Asir"
  STATE_89:0 "Al Baha"
  STATE_90:0 "Makkah"
- STATE_91:0 "Lwów"
- STATE_92:0 "Lublin"
- STATE_93:0 "Wołyn"
- STATE_94:0 "Polesie"
- STATE_95:0 "Nowogródek"
- STATE_96:0 "Wilejka"
- STATE_97:0 "Białystok"
- STATE_98:0 "Płock"
- STATE_99:0 "Jutland"
- STATE_100:0 "Iceland"
- STATE_101:0 "Greenland"
- STATE_102:0 "Slovenia"
- STATE_103:0 "Dalmatia"
- STATE_104:0 "Bosnia"
- STATE_105:0 "Montenegro"
- STATE_106:0 "Macedonia"
- STATE_107:0 "Serbia"
+ STATE_91:0 "Arabistan"
+ STATE_92:0 "Socotra"
+ STATE_93:0 "Djbouti"
+ STATE_94:0 "Eritrea"
+ STATE_95:0 "Somaliland"
+ STATE_96:0 "Majerteen"
+ STATE_97:0 "Mogadishu"
+ STATE_98:0 "Geledi"
+ STATE_99:0 "Jubaland"
+ STATE_100:0 "Mombasa"
+ STATE_101:0 "Juba"
+ STATE_102:0 "Kampala"
+ STATE_103:0 "Comoros"
+ STATE_104:0 "Mauritius"
+ STATE_105:0 "Reunion"
+ STATE_106:0 "Rwanda"
+ STATE_107:0 "Burundi"
  STATE_108:0 "Morava"
  STATE_109:0 "Croatia"
  STATE_110:0 "Østlandet"
