Central Africa and River Fixes

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- STATE_1:0 "Gilbraltor"
+ STATE_1:0 "Gibraltor"
  STATE_2:0 "Portugal"
  STATE_3:0 "France"
  STATE_4:0 "Spain"
@@ -153,41 +153,41 @@
  STATE_152:0 "Luanda"
  STATE_153:0 "Luanga"
  STATE_154:0 "Lesotho"
- STATE_155:0 "Transdanubia"
- STATE_156:0 "Calabria"
- STATE_157:0 "Abruzzo"
- STATE_158:0 "Piedmont"
- STATE_159:0 "Lombardy"
- STATE_160:0 "Veneto"
- STATE_161:0 "Emilia Romagna"
- STATE_162:0 "Tuscany"
- STATE_163:0 "Zara"
- STATE_164:0 "Dodecanese"
- STATE_165:0 "Cataluña"
- STATE_166:0 "Western Aragón"
- STATE_167:0 "Valencia"
- STATE_168:0 "Murcia"
- STATE_169:0 "Sevilla"
- STATE_170:0 "Extremadura"
- STATE_171:0 "Galicia"
- STATE_172:0 "Navarra"
- STATE_173:0 "Granada"
- STATE_174:0 "León"
- STATE_175:0 "Ciudad Real"
- STATE_176:0 "Burgos"
- STATE_177:0 "Islas Baleares"
- STATE_178:0 "Islas Canarias"
- STATE_179:0 "Beja"
- STATE_180:0 "Porto"
- STATE_181:0 "Guarda"
- STATE_182:0 "Crete"
- STATE_183:0 "Cyprus"
- STATE_184:0 "Thrace"
- STATE_185:0 "Epirus"
- STATE_186:0 "Peloponnese"
- STATE_187:0 "Aegean Islands"
- STATE_188:0 "Memel"
- STATE_189:0 "Siauliai"
+ STATE_155:0 "Kongo"
+ STATE_156:0 "Kabinda"
+ STATE_157:0 "Gabon"
+ STATE_158:0 "Bata"
+ STATE_159:0 "Odzala"
+ STATE_160:0 "Sao Tome"
+ STATE_161:0 "Malobo"
+ STATE_162:0 "Aouzou"
+ STATE_163:0 "Borkou"
+ STATE_164:0 "Waddai"
+ STATE_165:0 "Kanem"
+ STATE_166:0 "Batha"
+ STATE_167:0 "Douala"
+ STATE_168:0 "Bangui"
+ STATE_169:0 "Bagirmi"
+ STATE_170:0 "Dirkou"
+ STATE_171:0 "Manga"
+ STATE_172:0 "Dendi"
+ STATE_173:0 "Dosso"
+ STATE_174:0 "Sokoto"
+ STATE_175:0 "Tillaberi"
+ STATE_176:0 "Katsina"
+ STATE_177:0 "Zinder"
+ STATE_178:0 "Tahoua"
+ STATE_179:0 "Borno"
+ STATE_180:0 "Yobe"
+ STATE_181:0 "Adamawa"
+ STATE_182:0 "Wukari"
+ STATE_183:0 "Kano"
+ STATE_184:0 "Al Iskandariyah"
+ STATE_185:0 "Cairo"
+ STATE_186:0 "Al Minya"
+ STATE_187:0 "Aswan"
+ STATE_188:0 "Al Bahr al Ahmar"
+ STATE_189:0 "Al Wadi al Jadid"
  STATE_190:0 "Kurzeme"
  STATE_191:0 "Tartu"
  STATE_192:0 "Odessa"
