--- a/localisation/_RCE_africa_rrp_l_english.yml
+++ b/localisation/_RCE_africa_rrp_l_english.yml
@@ -34,9 +34,7 @@
  afr_start_eng_company_tooltip:0 "One of the following must be true:\n   Any owned state: is coastal.\n   Is neighbor of a §Y[ENG.GetAdjective] Colonial Power§!\n"
  afr_start_fra_company_tooltip:0 "One of the following must be true:\n   Any owned state: is coastal.\n   Is neighbor of a §Y[FRA.GetAdjective] Colonial Power§!\n"
  afr_start_por_company_tooltip:0 "One of the following must be true:\n   Any owned state: is coastal.\n   Is neighbor of a §Y[POR.GetAdjective] Colonial Power§!\n"
- afr_start_prs_company_tooltip:0 "One of the following must be true:\n   Any owned state: is coastal.\n   Is neighbor of a §Y[PRS.GetAdjective] Colonial Power§!\n"
- afr_start_bre_company_tooltip:0 "One of the following must be true:\n   Any owned state: is coastal.\n   Is neighbor of a §Y[BRE.GetAdjective] Colonial Power§!\n"
- afr_start_ham_company_tooltip:0 "One of the following must be true:\n   Any owned state: is coastal.\n   Is neighbor of a §Y[HAM.GetAdjective] Colonial Power§!\n"
+ afr_start_prs_company_tooltip:0 "One of the following must be true:\n   Any owned state: is coastal.\n   Is neighbor of a §Y[GER.GetAdjective] Colonial Power§!\n"
  afr_start_swe_company_tooltip:0 "One of the following must be true:\n   Any owned state: is coastal.\n   Is neighbor of a §Y[SWE.GetAdjective] Colonial Power§!\n"
  afr_start_ofs_company_tooltip:0 "One of the following must be true:\n   Any owned state: is coastal.\n   Is neighbor of a §Y[OFS.GetAdjective] Colonial Power§!\n"
  afr_has_company_port_trigger_tooltip:0 "Our §YColonial Company Partner§! exists and has military access"
