--- a/localisation/_RCE_africa_tribe_l_english.yml
+++ b/localisation/_RCE_africa_tribe_l_english.yml
@@ -3,7 +3,7 @@
  afr_close_proximity_to_coptic_christianity:0 "A nation with §YCoptic Christianity§! is within close proximity"
  afr_close_proximity_to_christianity:0 "A nation with §YChristianity§! is within close proximity"
  AF_T_idea_slave_market_expanded:0 "Expanded Slave Market"
- 
+
  AF_T_wisdom_ancients:0 "Wisdom of the Ancients"
  AF_T_wisdom_ancients_desc:0 "We need to learn from our predecessors in order to lead our people."
  AF_T_might_warrior:0 "Might of the Warriors"
@@ -183,7 +183,7 @@
  AF_O_K_nascent_economy_desc:0 "Our improvement in our country allows us to have an economy that can sustain itself."
  AF_O_K_develop_slave_market_desc:0 "The slave market will create wealth by trading with this continent."
  AF_O_K_organize_work_desc:0 "Organizing the work will allow for a more efficient construction effort."
- AF_O_K_small_farms_desc:0 "Small farms will provide our country with food."
+ AF_O_K_small_farms_desc:0 "Smallbuilding_farms will provide our country with food."
  AF_O_K_noble_feodalism_desc:0 "Creating a structural system based on feodalism will give enough decentralization to let the king rule over important matter, while also keeping every piece of land under control."
  AF_O_K_regional_influence_desc:0 "We are a power that can rival anyone in our neighborhood, let's show that to the world."
  AF_O_K_western_oriented_desc:0 "The western world has a lot to offer, let's open up to them."
@@ -239,7 +239,7 @@
  eoanb_tt_event_africa_2_c:0 "§YOur religion will remain Animist.§!"
  eoanb_om_africa_meet_west:0 "Diplomatic Contact"
  eoanb_af_t_tt_focus_western_leaders:0 "§GOur relations with the colonial powers will improve.§!"
-#autocracy:0 "§GWe will become an organized Tribal Nation!§!"
+#imperialism:0 "§GWe will become an organized Tribal Nation!§!"
  eoanb_af_t_tt_focus_organize_theocracy:0 "§GWe will become an organized Tribal Nation!§!"
  eoanb_af_t_tt_focus_organize_chauvpop:0 "§GWe will become an organized Tribal Nation!§!"
  africa.3.t:0 "Establishing our Borders"
@@ -250,7 +250,7 @@
  africa.4.t:0 "[Root.GetAdjective] Tribal Community produces Weapons!"
  africa.4.d:0 "A small tribal community in our nation has produced some weapons independently and has offered them as a gift to our state! Should we accept them?"
  africa.4.a:0 "Yes, thank them for it!"
- africa.4.b:0 "What a waste of time! They should be farming instead."
+ africa.4.b:0 "What a waste of time! They should bebuilding_farming instead."
  eoanb_flag_event_africa_4:0 "This country has received Tribal Weapons from a local community."
  eoanb_flag_event_africa_5:0 "This country has recently had a good harvest year."
  AF_T_great_harvest:0 "Good Harvest"
