--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -188,51 +188,51 @@
  STATE_187:0 "Aswan"
  STATE_188:0 "Al Bahr al Ahmar"
  STATE_189:0 "Al Wadi al Jadid"
- STATE_190:0 "Kurzeme"
- STATE_191:0 "Tartu"
- STATE_192:0 "Odessa"
- STATE_193:0 "Chernigov"
- STATE_194:0 "Mozyr"
- STATE_195:0 "Leningrad"
- STATE_196:0 "Kherson"
- STATE_197:0 "Mykolaiv"
- STATE_198:0 "Vinnytsia"
- STATE_199:0 "Khmelnytskyi"
- STATE_200:0 "Zaporozhe"
- STATE_201:0 "Zhytomyr"
- STATE_202:0 "Kiev"
- STATE_203:0 "Cherkasy"
- STATE_204:0 "Bobruysk"
- STATE_205:0 "Kaluga"
- STATE_206:0 "Minsk"
- STATE_207:0 "Vitebsk"
- STATE_208:0 "Luga"
- STATE_209:0 "Pskov"
- STATE_210:0 "Nevel"
- STATE_211:0 "Burgas"
- STATE_212:0 "Plovdiv"
- STATE_213:0 "Murmansk"
- STATE_214:0 "Arkhangelsk"
- STATE_215:0 "Onega"
- STATE_216:0 "Olonets"
- STATE_217:0 "Stalingrad"
- STATE_218:0 "Rostov"
- STATE_219:0 "Moscow"
- STATE_220:0 "Kursk"
- STATE_221:0 "Kharkov"
- STATE_222:0 "Orel"
- STATE_223:0 "Tula"
- STATE_224:0 "Bryansk"
- STATE_225:0 "Sumy"
- STATE_226:0 "Dnipropetrovsk"
- STATE_227:0 "Stalino"
- STATE_228:0 "Voroshilovgrad"
- STATE_229:0 "Azerbaijan"
- STATE_230:0 "Armenia"
- STATE_231:0 "Georgia"
- STATE_232:0 "Grozny"
- STATE_233:0 "Caucasus Mountains"
- STATE_234:0 "Krasnodar"
+ STATE_190:0 "Benin"
+ STATE_191:0 "Borgu"
+ STATE_192:0 "Togo"
+ STATE_193:0 "Volta"
+ STATE_194:0 "Mole"
+ STATE_195:0 "Ashanti"
+ STATE_196:0 "Kumasi"
+ STATE_197:0 "Accra"
+ STATE_198:0 "Cape Coast"
+ STATE_199:0 "Grand Bassam"
+ STATE_200:0 "Tai"
+ STATE_201:0 "Akan"
+ STATE_202:0 "Comoe"
+ STATE_203:0 "Mande"
+ STATE_204:0 "Kong"
+ STATE_205:0 "Liberia"
+ STATE_206:0 "Freetown"
+ STATE_207:0 "Kissidougou"
+ STATE_208:0 "Bobo-Dioulasso"
+ STATE_209:0 "Kossi"
+ STATE_210:0 "Ouagadougou"
+ STATE_211:0 "Yatenga"
+ STATE_212:0 "Zanzourgou"
+ STATE_213:0 "Labe"
+ STATE_214:0 "Faranah"
+ STATE_215:0 "Dinguiraye"
+ STATE_216:0 "Boundou"
+ STATE_217:0 "Nioro"
+ STATE_218:0 "Fuladu"
+ STATE_219:0 "Kassambara"
+ STATE_220:0 "Dscahllon"
+ STATE_221:0 "Bamako"
+ STATE_222:0 "Sego"
+ STATE_223:0 "Kala"
+ STATE_224:0 "Asswanek"
+ STATE_225:0 "Bambara"
+ STATE_226:0 "Djean"
+ STATE_227:0 "Upper Massina"
+ STATE_228:0 "Tombo"
+ STATE_229:0 "Lower Massina"
+ STATE_230:0 "Gao"
+ STATE_231:0 "Timbuktu"
+ STATE_232:0 "Taoudenni"
+ STATE_233:0 "Araouane"
+ STATE_234:0 "Kidai"
  STATE_235:0 "Stavropol"
  STATE_236:0 "Astrakhan"
  STATE_237:0 "Elista"
